tests/negative/neg_pr113_string_discriminant.safe
package neg_PR113_String_Discriminant
   type packet (Label : string) is
      record
         value : integer;


